<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecundario"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="422dp"
        android:layout_height="850dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonActivitiesPre"
        android:layout_width="175dp"
        android:layout_height="64dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimario"
        android:text="@string/actividades"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonYourActivities"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonWeather"
        android:layout_width="172dp"
        android:layout_height="67dp"
        android:layout_marginTop="196dp"
        android:backgroundTint="#7cd7cf"
        android:text="@string/tiempo_en_tu_zona"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonYourActivities"
        android:layout_width="175dp"
        android:layout_height="64dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/colorPrimario"
        android:text="@string/tus_actividades"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="157dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoandroid" />

    <TextView
        android:id="@+id/textViewTeApetece"
        android:layout_width="222dp"
        android:layout_height="24dp"
        android:text="@string/haces_deporte_al_aire_libre"
        android:textAlignment="center"
        android:textColor="#e32f21"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWeather" />

    <!-- Controles de música dentro de un CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/musicControlsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeApetece">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Botón de selección de canción -->
            <Button
                android:id="@+id/selectSongButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:onClick="onSelectSongButtonClick"
                android:text="Seleccionar Canción" />

            <!-- Botones de reproducción y siguiente -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Botón de reproducción -->
                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/play_button_description"
                    android:onClick="onPlayButtonClick"
                    android:src="@drawable/ic_play" />

                <!-- Botón de siguiente -->
                <ImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/next_button_description"
                    android:onClick="onNextButtonClick"
                    android:src="@drawable/ic_next_music" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Spinner para la selección de canciones -->
    <Spinner
        android:id="@+id/songSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/musicControlsCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>