<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="775dp"
        android:layout_height="1138dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"
        app:srcCompat="@drawable/fondo_layout_desenfocado_blanco" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNombre"
        style="@style/colorBox"
        android:layout_width="276dp"
        android:layout_height="80dp"
        android:elevation="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextNombre"
            android:layout_width="274dp"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:textAlignment="viewStart"
            android:textColorHint="#CDCCCC"
            android:textSize="16sp"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.434" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTiempo"
        style="@style/colorBox"
        android:layout_width="276dp"
        android:layout_height="80dp"
        android:elevation="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextTiempo"
            android:layout_width="274dp"
            android:layout_height="55dp"
            android:drawableStart="@drawable/ic_repeat"
            android:drawablePadding="5dp"
            android:elevation="1dp"
            android:ems="10"
            android:hint="@string/rep_min"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:textAlignment="viewStart"
            android:textColorHint="#CDCCCC"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.434" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:elevation="1dp"
        android:text="@string/zona_entreno"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerZona"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/spinner_border"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textZona"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerRep_Tiempo"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/spinner_border"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerZona"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/a_adir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="AñadirActividad"/>

    <View
        android:id="@+id/squareView"
        android:layout_width="322dp"
        android:layout_height="447dp"
        android:background="@drawable/rectangular_background"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="26dp" />

</androidx.constraintlayout.widget.ConstraintLayout>